--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,4 +1,5 @@
 # Stage 1: Build the Application
+# Uses node:18-alpine as requested
 FROM node:18-alpine AS builder
 
 # Set the working directory inside the container
@@ -11,9 +12,9 @@ COPY package*.json ./
 RUN npm install
 
 # Copy the rest of the application code
-COPY . .
+COPY server.js .
 
-# Stage 2: Define the runtime image (optional but good practice for smaller size)
+# Stage 2: Define the runtime image (Final minimal image)
 FROM node:18-alpine
 
 # Set the working directory
@@ -22,8 +23,9 @@ WORKDIR /app
 # Copy built artifacts from the builder stage
 COPY --from=builder /app .
 
-# Expose the port the application listens on (defined in server.js)
+# Expose the port the application listens on (3001 from your server.js)
 EXPOSE 3001
 
 # Command to run the application when the container starts
+# This requires a 'start' script in package.json
 CMD ["npm", "start"]
